# aws-timestream-example

./: Cargo.toml
src/: main.rs  main_container_credentials.rs
