[package]
name = "aws-timestream-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-timestream = { git = "https://git@github.com/glistman/aws-timestream.git", tag = "v0.0.3" }
tokio = { version = "1.12.0", features = ["full"] }
chrono = { version = "0.4.19", features =["serde"]}
rand = "0.8.4"